src/objects/DFC_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <referenceTo>DFC_Community__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <description>The date the Annual Assessment was submitted</description>
        <inlineHelpText>The date the Annual Assessment was submitted</inlineHelpText>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Number__c</fullName>
        <label>Year Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DFC Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Status__c</columns>
        <columns>Year_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Annual Assessments</label>
    </listViews>
    <nameField>
        <displayFormat>DFC-{0000}</displayFormat>
        <label>DFC Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>